horizontal alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -13,35 +13,39 @@ body {
 
 .home_icon {
     width: 20em;
-    padding: 1.5em;
+    padding: 1.5em 1.5em 0 1.5em;
 }
 
-.nav_links{
-    /* display: inline-block; */
-}
+.nav_bar {
+    display: inline-block;
+    padding-left: .5em;
+ }
 
-.white_button {
+.nav_button {
     display: inline-block;
     background-color: white;
     padding-left: 1em;
     padding-right: 1em;
     padding-top: .3em;
     padding-bottom: .3em;
-    margin: 1em;
+    margin: 0em .5em .5em .5em;
+    list-style: none;
 }
 
-.white_button a {
+.nav_button a {
     text-decoration: none;
     color: black;
 }
 
-.nav_links {
-    /* display: inline-block; */
-    list-style: none;
- }
 
-section#cards {
+figure {
     display: inline-block;
+}
+
+figcaption {
+    color: white;
+    background-color: var(--bg-blue);
+    padding: 1em;
 }
 
 p {
@@ -49,7 +53,7 @@ p {
 }
 
 header {
-    /*  */
+    color: var(--bg-blue)
 }
 
 div#picturePlaceholder {
